[package]
name = "easy-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
jsonwebtoken = "8.3.0"
serde = "1.0.188"
actix = "0.13.1"
sqlx = { version = "0.7.1", features = [  "chrono", "json", "postgres", "runtime-async-std", "rust_decimal"] }
reqwest = { version =  "0.11.20", features = ["serde_json", "json"] }
actix-web-lab = "0.19.1"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.28"
actix-web-httpauth = "0.8.0"